--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "inline"
     ],
     "website": "https://github.com/ritheshrkrm/PiroAutoFilterBot",
-    "repository": "https://github.com/ritheshrkrm/PiroAutoFilterBot",
+    "repository": "https://github.com/Blackangel55/Piro-Angel",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -66,7 +66,11 @@
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
             "value": "Telegram_files",
             "required": false
-        }
+        },
+        "PM_FILTER": {
+            "description": "Your Choice",
+            "value": "True",
+            "required": true
     },
     "addons": [],
     "buildpacks": [{
@@ -75,7 +79,7 @@
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "free"
+            "size": "eco"
         }
     }
 }
